<resources>
    <string name="app_name">Fiap Notes</string>
    <string name="app_name_cadastro">Fiap Notes - Dados da Conta</string>
    <string name="nome">Nome</string>
    <string name="logar">Acessar</string>
    <string name="email"> Email</string>
    <string name="senha"> Senha</string>
    <string name="voltar">Fechar e Retornar</string>
    <string name="valida_login">Preencha os dados de login corretamente!</string>
    <string name="Gravar">Gravar</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="gravar_dados">Gravar Dados</string>
    <string name="excluir_chaves">Excluir Chaves</string>
    <string name="carregar_chaves">Carregar Chaves</string>
    <string name="verificar_chaves">Verificar Chaves</string>
    <string name="dados_contas">Fiap Notas - Dados da Conta</string>
    <string name="gravar_arquivo">Gravar Arquivo</string>
    <string name="ler_arquivo">Ler Arquivo</string>
    <string name="excluir_arquivo">Excluir Arquivo</string>
    <string name="validacao_conta">Preencha os dados corretamente</string>
    <string name="cadastro_ok">Cadastro efetuado com sucesso!</string>
    <string name="exclusao_ok">Excluido com sucesso</string>
    <string name="login_ok">Dados de login existentes</string>
    <string name="login_nok">Dados de login não existem</string>
    <string name="arquivo_ok">Arquivo gravados com sucesso</string>
    <string name="arquivo_nok">Arquivo nao foi gravado com sucesso</string>
    <string name="ler_arq_nok">Não foi possível ler o arquivo</string>
    <string name="exclusao_arq_ok">Excluido com sucesso</string>
    <string name="exclusao_arq_nok">Não foi possível excluir</string>
    <string name="primeiro_acesso">Primeiro acesso</string>

</resources>

