<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastra_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.fiap.notas.Cadastra_Login_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:id="@+id/edtNome"
            android:hint="@string/nome"
            android:layout_marginTop="5dp"
            android:inputType="textPersonName"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtSobreNome"
            android:hint="@string/sobrenome"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:maxLines="1"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rgSexo"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:id="@+id/rbFeminino"
                android:text="@string/feminino"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbMasculino"
                android:text="@string/masculino"/>
        </RadioGroup>
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtDataNascimento"
            android:hint="@string/data_de_nascimento"
            android:inputType="date"
            android:layout_marginTop="10dp"
            android:maxLines="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtSenha"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:maxLines="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGravarChaves"
            android:layout_marginTop="10dp"
            android:text="@string/gravar_dados"
            android:textStyle="bold"
            android:onClick="gravarChaves"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnExcluirChaves"
                android:text="@string/excluir_chaves"
                android:layout_weight="1"
                android:textStyle="bold"
                android:onClick="excluirChaves"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCarregarChaves"
                android:text="@string/carregar_chaves"
                android:layout_weight="1"
                android:textStyle="bold"
                android:onClick="carregarChaves"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnVerificarChaves"
                android:text="@string/verificar_chaves"
                android:layout_weight="1"
                android:textStyle="bold"
                android:onClick="verificarChaves"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGravarArquivo"
                android:text="@string/gravar_arquivo"
                android:layout_weight="1"
                android:textStyle="bold"
                android:onClick="gravarArquivo"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLerArquivo"
                android:text="@string/ler_arquivo"
                android:layout_weight="1"
                android:textStyle="bold"
                android:onClick="lerAquivo"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnExcluirArquivo"
                android:text="@string/excluir_arquivo"
                android:layout_weight="1"
                android:textStyle="bold"
                android:onClick="excluirArquivo"/>
        </LinearLayout>
        <Button
            style="@style/AppTheme.ButtonPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnVoltar"
            android:layout_marginTop="5dp"
            android:text="@string/voltar"
            android:textStyle="bold"
            android:onClick="voltar2"/>
    </LinearLayout>

    </ScrollView>
</LinearLayout>
